# PaddleOCR

deploy/: CMakeLists.txt
deploy/cpp_infer/: CMakeLists.txt  display3.bat  setting.json  trt_cls_shape.txt  trt_det_shape.txt  trt_rec_shape.txt
deploy/cpp_infer/BitBlt/: CMakeLists.txt
deploy/cpp_infer/BitBlt/include/: DesktopScreenshot.h  FindWindow.h  MonitorScreenshot.h  WindowShot.h
deploy/cpp_infer/BitBlt/src/: DesktopScreenshot.cpp  FindWindow.cpp  MonitorScreenshot.cpp  WindowShot.cpp  main.cpp
deploy/cpp_infer/IDDdisplay/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  WorkerThread.h  main.cpp
deploy/cpp_infer/external-cmake/: auto-log.cmake
deploy/cpp_infer/include/: paddleocr.h
deploy/cpp_infer/src/: ITOOLS.cpp  ITOOLS.ui  Resource.qrc  args.cpp  main.cpp
deploy/cpp_infer/src/ocr_src/: args.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  paddleocr.cpp  paddlestructure.cpp  postprocess_op.cpp  preprocess_op.cpp  structure_layout.cpp  structure_table.cpp  utility.cpp
deploy/cpp_infer/src/qt_include/: ButtonDelegate.h  Databasesql.h  DxgiManager.h  DxgiTextureStaging.h  EGlobalVariable.h  HandleWrapper.h  ITOOLS.h  ImgTabWidget.h  JsonTool.h  KeyAndMouseThread.h  KeyMouseQLineEdit.h  KeyMouseWidget.h  LogTextEdit.h  MSDKWrapper.h  MyLogTextEdit.h  MyQTabWidget.h  PPOCRWidget.h  PaddleDWrapper.h  SqlToolPool.h  YSDKdll.h  eventinfo.h  msdk.h  vncTabWidget.h  vncWidget.h
deploy/cpp_infer/src/qt_src/: ButtonDelegate.cpp  DxgiManager.cpp  DxgiTextureStaging.cpp  EGlobalVariable.cpp  ITOOLS.cpp  ImgTabWidget.cpp  KeyAndMouseThread.cpp  YSDKdll.cpp  (+11 more)
(+5 files in other folders)
